app/assets/main.css
/* ... */
:where(ul) > li::marker {
  color: inherit;
}

:where(ol) > li::marker {
  color: var(--color-accent-graphic);
  font-variant-numeric: tabular-nums;
}

:where(code) {
  color: var(--color-text);
  font-weight: var(--font-weight-regular);
  background-color: var(--color-grey-bg);
  padding-inline: 0.25em;
  border-radius: var(--radius-sm);
  overflow-wrap: anywhere;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
}

:where(pre) {
  overflow: auto;
  white-space: pre-wrap;
  word-break: break-all;
}

:where(pre code) {
  border-radius: var(--radius-md);
  display: inline-block;
  padding: 0.75rem 1rem;
}

:where(address) {
  font-style: normal;
  white-space: pre-line;
}

:where(kbd) {
  background-color: var(--color-white);
  border-radius: var(--radius-sm);
  padding-inline: 0.35rem;
  padding-block: 0.1rem 0.15rem;
  border: 1px solid var(--color-grey-bg);
  box-shadow: inset 0 -2px 0 var(--color-grey-bg);

  &:has(.iconify) {
    padding-block: 0.2rem 0.05rem;
  }
}

:where(abbr) {
  text-decoration: none;

  &:hover {
    text-decoration: dotted underline;
    text-underline-offset: 0.35rem;
  }
}

:where(hr) {
  border: 0;
  width: 100%;
  height: 1px;
  background-color: var(--color-grey-bg);
  margin-block: 0;
}

:where(table) {
  border-collapse: collapse;
  text-align: left;
  font-variant-numeric: tabular-nums;

  thead th {
    font-weight: var(--font-weight-medium);
    color: var(--color-grey-text);
  }

  tbody th {
    font-weight: var(--font-weight-medium);
  }

  th,
  td {
    padding: 0.5rem;
  }

  thead tr {
    border-color: var(--color-grey-bg);
    border-style: solid;
    border-width: 0 0 0 0;
  }

  tbody tr {
    border-color: var(--color-grey-bg);
    border-style: solid;
    border-width: 1px 0;
  }
}

.table-cell {
  vertical-align: middle;
  display: inline-flex;
  align-items: center;
  gap: 0.5rem;
}

:where(button) {
  font: inherit;
  color: inherit;
  font-weight: var(--font-weight-medium);

  &:focus-visible {
    outline: 2px solid var(--focus-color);
  }
}

/* Form inputs */
:where(.label, label) {
  font-weight: var(--font-weight-medium);
}
:where(.label, label, legend) {
  -webkit-user-select: none;
  user-select: none;
  transition-property: opacity;
  transition-duration: var(--duration-sm);

  &.disabled {
    opacity: 25%;
  }
}

:where(fieldset) {
  border: none;
  padding: 0;
  margin-inline: 0;
}

:where(legend) {
  padding: 0;
  font-weight: var(--font-weight-medium);
}

:where(textarea) {
  padding: 0.5rem;
  resize: vertical;
}

:where(input) {
  background-color: transparent;
  filter: none;

  &:-webkit-autofill {
    -webkit-text-fill-color: var(--color-accent-text);
    box-shadow: 0 0 0 100px var(--color-accent-bg) inset;
  }
}

:where(.file-input-wrapper, .form-field-wrapper, .markdown-editor) {
  position: relative;
  display: inline-grid;
  align-items: center;
  align-content: start;
  transition-property: opacity;
  transition-duration: var(--duration-sm);

  label,
  .label {
    display: inline-flex;
    gap: 0.35rem;
    min-height: 1.25rem;
    align-items: center;
    font-size: var(--font-size-xs);
    margin-block-end: 0.125rem;
    color: var(--color-grey-text);
  }

  .instruction {
    margin-block-start: 0.25rem;
    margin-block-end: 0;
    font-size: var(--font-size-xxs);
    color: var(--color-grey-text);
  }

  &:has(.select:disabled, .input:disabled, .textarea:disabled) {
    opacity: 35%;
  }

  .select,
  .input,
  .textarea {
    font-family: system-ui, sans-serif;
    font-size: 16px;
    width: 100%;
    border: 1px solid var(--color-grey-graphic);
    border-radius: var(--radius-md);

    &::placeholder {
      color: var(--color-grey-graphic);
    }
  }

  .select {
    &:focus-visible {
      outline: 1px solid var(--focus-color);
      border-color: var(--focus-color);
    }
  }

  .input,
  .textarea {
    &:focus {
      outline: 1px solid var(--focus-color);
      border-color: var(--focus-color);
    }
  }
}

:where(.error-wrapper) {
  .error {
    display: none;
    align-items: center;
    gap: 0.25rem;
    color: var(--color-red-text);
    font-size: var(--font-size-xxs);
    padding-block-start: 0.25rem;
  }

  .iconify {
    flex-shrink: 0;
  }
}

:where(.form-field-wrapper.show-invalid:has(:invalid)),
:where(.show-invalid) .form-field-wrapper:has(:invalid) {
  .select,
  .textarea,
  .input {
    border-color: var(--color-red-graphic);
  }

  .error-wrapper .error {
    display: flex;
  }
}

:where(.show-invalid) .input-variant--krafters:has(:invalid) .input:not(:focus),
:where(.show-invalid)
  .select-variant--krafters:has(:invalid)
  .select:not(:focus),
:where(.show-invalid)
  .textarea-variant--krafters:has(:invalid)
  .textarea:not(:focus) {
  box-shadow: 0 1.5px 0 0 var(--color-red);
}

/* Tippy classes for Popover and Tooltip components */
.tippy-box[data-theme~='krafters'] {
  border-radius: var(--radius-md);
  box-shadow: var(--shadow-3);
  color: var(--color-text);
  background-color: var(--color-card-bg);
  border: 1px solid var(--color-popover-border);

  --arrow-color: var(--color-card-border);
}

.light-mode {
  .tippy-box[data-theme~='krafters'] {
    --arrow-color: var(--color-card-bg);
  }
}

[data-theme~='krafters'] .tippy-content {
  font-size: var(--font-size-sm);
  border-radius: var(--radius-md);
  padding: 0;
}

.tippy-box[data-theme~='krafters'][data-placement^='top']
  > .tippy-arrow::before {
  border-block-start-color: var(--arrow-color);
  bottom: -8px;
}

.tippy-box[data-theme~='krafters'][data-placement^='bottom']
  > .tippy-arrow:before {
  border-block-end-color: var(--arrow-color);
  top: -8px;
}

.tippy-box[data-theme~='krafters'][data-placement^='left']
  > .tippy-arrow::before {
  border-inline-start-color: var(--arrow-color);
  right: -8px;
}

.tippy-box[data-theme~='krafters'][data-placement^='right']
  > .tippy-arrow::before {
  border-inline-end-color: var(--arrow-color);
  left: -8px;
}
/* ... */

